WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89977
Web Inspector: Native memory snapshots crash in debug mode.
https://bugs.webkit.org/show_bug.cgi?id=89977
Summary
Web Inspector: Native memory snapshots crash in debug mode.
Alexei Filippov
Reported
2012-06-26 06:55:57 PDT
The crash happens during visiting external Arrays.
Attachments
Patch
(1.33 KB, patch)
2012-06-26 06:59 PDT
,
Alexei Filippov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexei Filippov
Comment 1
2012-06-26 06:59:23 PDT
Created
attachment 149528
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-26 07:02:06 PDT
Comment on
attachment 149528
[details]
Patch Rejecting
attachment 149528
[details]
from commit-queue.
alexeif@chromium.org
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Review Bot
Comment 3
2012-06-26 09:31:06 PDT
Comment on
attachment 149528
[details]
Patch Clearing flags on attachment: 149528 Committed
r121265
: <
http://trac.webkit.org/changeset/121265
>
WebKit Review Bot
Comment 4
2012-06-26 09:31:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug