Web Inspector: Native memory snapshots crash in debug mode. https://bugs.webkit.org/show_bug.cgi?id=89977

Patch by Alexei Filippov <alexeif@chromium.org> on 2012-06-26
Reviewed by Yury Semikhatsky.

* bindings/v8/V8DOMWrapper.cpp:
(WebCore::V8DOMWrapper::maybeDOMWrapper):

Canonical link: https://commits.webkit.org/107835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121265 268f45cc-cd09-0410-ab3c-d52691b4dbfc